Fixed bug #47639 (pg_copy_from() WARNING: nonstandard use of \\ in a string literal)